--- a/HTML/ConfigDataAccessWithConfigs.html
+++ b/HTML/ConfigDataAccessWithConfigs.html
@@ -43,10 +43,27 @@
   <span class="name"><span class="ltgt"><</span>DataConfig</span><span class="ltgt">></span>;
     <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>ConfigName<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
     <span class="name"><span class="ltgt"><</span>ConnectionTypeName</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-    <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServiceName<span class="name"><span class="ltgt"><</span>/DbServer</span><span class="ltgt">></span>                   
+    <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServerName<span class="name"><span class="ltgt"><</span>/DbServer</span><span class="ltgt">></span>                   
     <span class="name"><span class="ltgt"><</span>Database</span><span class="ltgt">></span>DatabaseName<span class="name"><span class="ltgt"><</span>/Database</span><span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>/DataConfig</span><span class="ltgt">></span>
 <span class="name"><span class="ltgt"><</span>/DataConfigs</span><span class="ltgt">></span></pre>
+      <p>
+        The available ConnectionTypeNames are: "SQLServer", "OLEDB", "ODBC", "MySQL" and "Access".
+      </p>
+      <p>
+        The DbServer is the "Server Name" that is displayed when you connect to
+        the service Using SQL Server Management Studio.
+      </p>
+      <pre>
+<span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
+<span class="name"><span class="ltgt"><</span>ConnectionTemplates</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
+                     <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
+  <span class="name"><span class="ltgt"><</span>ConnectionTemplate</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>SQLServer</Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Template</span><span class="ltgt">></span>Data Source={DbServer}; Initial Catalog={Database}; Integrated Security=True; User Id={UID} Password={PSWD}; <span class="name"><span class="ltgt"><</span>/Template</span><span class="ltgt">></span>
+  <span class="name"><span class="ltgt"><</span>/ConnectionTemplate</span><span class="ltgt">></span>
+<span class="name"><span class="ltgt"><</span>/ConnectionTemplates</span><span class="ltgt">></span>
+</pre>
 
       <p>
         Retrieve Configuration and Create DataAccess
