--- a/HTML/HowToUseLJCProjects.html
+++ b/HTML/HowToUseLJCProjects.html
@@ -73,6 +73,12 @@
   LJCDataAccess         ADO.NET Data Access Library</pre>
       </p>
       <p>
+        You can also copy these helpful test programs.
+        <pre>
+  LJCNetCommonTest      .NET Common Test Code
+  LJCDataAccessTest     ADO.NET Data Access Test Code</pre>
+      </p>
+      <p>
         Copy the "Libraries" and the following project folders and subfolders
         from CoreAssemblies if you are going to develop with WinForms. These
         projects build the following assemblies:
@@ -80,8 +86,7 @@
   LJCWinFormCommon      WinForm Common Library
   LJCWinFormControls    WinForm Control Library
   LJCDBMessage          Data Message Library
-  LJCGridDataLib        Grid Helper Library
-</pre>
+  LJCGridDataLib        Grid Helper Library</pre>
       </p>
       <p>
         Now just double-click your left mouse button on BuildAll.cmd in your
