--- a/HTML/HowToUseLJCProjects.html
+++ b/HTML/HowToUseLJCProjects.html
@@ -66,27 +66,35 @@
       </p>
       <p>
         It is recommended to start by copying the following project folders and
-        subfolders from CoreAssemblies:
+        subfolders from CoreAssemblies.
         <pre>
   LJCNetCommon          .NET Common Library
   LJCDataAccessConfig   Data Access Configuration Library
   LJCDataAccess         ADO.NET Data Access Library</pre>
       </p>
       <p>
-        You can also copy these helpful test programs.
+        You can also copy these helpful test programs from CoreTestApps.
         <pre>
   LJCNetCommonTest      .NET Common Test Code
   LJCDataAccessTest     ADO.NET Data Access Test Code</pre>
       </p>
       <p>
-        Copy the "Libraries" and the following project folders and subfolders
-        from CoreAssemblies if you are going to develop with WinForms. These
-        projects build the following assemblies:
+        Copy the "Libraries" folders and subfolders from CoreAssemblies if you
+        are going to develop with WinForms.<br />
+        This project builds the following assemblies:
         <pre>
   LJCWinFormCommon      WinForm Common Library
-  LJCWinFormControls    WinForm Control Library
+  LJCWinFormControls    WinForm Control Library</pre>
+      </p>
+      <p>
+        Copy the following projects for advanced message-based data access.
+        <pre>
   LJCDBMessage          Data Message Library
-  LJCGridDataLib        Grid Helper Library</pre>
+  LJCGridDataLib        Grid Helper Library (For WinForms development.)
+  LJCDBDataAccess       Message-based Data Access Library
+  LJCTextDataReader     Text DataReader Library
+  LJCDBClientLib        Message-based Data Access Client Library
+  LJCGridDataTests      GridData Library Test Code (From CoreTestApps)</pre>
       </p>
       <p>
         Now just double-click your left mouse button on BuildAll.cmd in your
