--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -37,6 +37,10 @@
         How to Configure DataAccess using
         <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
+      <p>
+        How to add Data Rows to an LJCDataGrid using
+        <a href="AddDataRowsToGrid.html">TableData</a>.
+      </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
