--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -38,7 +38,7 @@
         <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
       <p>
-        How to add Data Rows to an LJCDataGrid using
+        How to add DataTable Rows to an LJCDataGrid using
         <a href="AddDataRowsToGrid.html">TableData</a>.
       </p>
     </div>
