--- a/HTML/AddDataRowsToGrid.html
+++ b/HTML/AddDataRowsToGrid.html
@@ -32,7 +32,7 @@
       </p>
 
       <h4>Load Grid Rows from Table</h4>
-      <pre>
+      <pre style="font-size: 9pt">
 <span class='keyWord'>using</span> LJCGridDataLib;
 <span class='keyWord'>using</span> LJCWinFormControls;
 
