--- a/HTML/ConfigDataAccessWithConfigs.html
+++ b/HTML/ConfigDataAccessWithConfigs.html
@@ -38,7 +38,7 @@
       <p>
         This is an example of a DataConfigs.xml file.
       </p>
-      <pre>
+      <pre style="font-size: 9pt">
 <span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
 <span class="name"><span class="ltgt"><</span>DataConfigs</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
              <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
@@ -66,7 +66,7 @@
       <p>
         This is an example of a ConnectionTemplates.xml file.
       </p>
-      <pre>
+      <pre style="font-size: 9pt">
 <span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
 <span class="name"><span class="ltgt"><</span>ConnectionTemplates</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
    <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
@@ -94,7 +94,7 @@
       </p>
 
       <h4>Retrieve Configuration and Create DataAccess</h4>
-      <pre style='margin-left: 2px;'>
+      <pre style='margin-left: 2px; font-size: 9pt'>
 <span class='keyWord'>using</span> LJCDataAccess;
 <span class='keyWord'>using</span> LJCDataAccessConfig;
 
