--- a/HTML/ConfigDataAccessWithBuilder.html
+++ b/HTML/ConfigDataAccessWithBuilder.html
@@ -34,7 +34,7 @@
 
       <!-- *********** -->
       <h4>SQL Server</h4>
-      <pre style='margin-left: 2px; font-size: 9pt'>
+      <pre class="code">
 <span class='keyWord'>using</span> System.Data.Common;
 <span class='keyWord'>using</span> LJCDataAccess;
 
@@ -60,7 +60,7 @@
 
       <!-- *********** -->
       <h4>MySQL</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "server", "DataServiceName" },
@@ -77,7 +77,7 @@
 
       <!-- *********** -->
       <h4>OLEDB</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Provider", "SQLOLEDB" },
@@ -91,7 +91,7 @@
 
       <!-- *********** -->
       <h4>ODBC</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Driver", "SQL Native Client" },
@@ -105,7 +105,7 @@
 
       <!-- *********** -->
       <h4>Microsoft Access</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Provider", "Microsoft.ACE.OLEDB.12.0" },
@@ -118,7 +118,7 @@
 
       <!-- *********** -->
       <h4>Excel 12</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Data Source", "C:\File.xlsx" },
@@ -129,7 +129,7 @@
 
       <!-- *********** -->
       <h4>Excel 8</h4>
-      <pre style="font-size: 9pt"">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Data Source", "C:\File.xls" },
@@ -140,7 +140,7 @@
 
       <!-- *********** -->
       <h4>Oracle</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Data Source", "ORCL" },
@@ -152,7 +152,7 @@
 
       <!-- *********** -->
       <h4>Text</h4>
-      <pre style="font-size: 9pt">
+      <pre class="code">
   <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
     { "Provider", "Microsoft.ACE.OLEDB.12.0" },
