--- a/HTML/HowToUseLJCProjects.html
+++ b/HTML/HowToUseLJCProjects.html
@@ -68,14 +68,14 @@
       <p>
         It is recommended to start by copying the following project folders and
         subfolders from CoreAssemblies.
-        <pre>
+        <pre style="font-size: 9pt">
   LJCNetCommon          .NET Common Library
   LJCDataAccessConfig   Data Access Configuration Library
   LJCDataAccess         ADO.NET Data Access Library</pre>
       </p>
       <p>
         You can also copy these helpful test programs from CoreTestApps.
-        <pre>
+        <pre style="font-size: 9pt">
   LJCNetCommonTest      .NET Common Test Code
   LJCDataAccessTest     ADO.NET Data Access Test Code</pre>
       </p>
@@ -83,13 +83,13 @@
         Copy the "Libraries" folders and subfolders from CoreAssemblies if you
         are going to develop with WinForms.<br />
         This project builds the following assemblies:
-        <pre>
+        <pre style="font-size: 9pt">
   LJCWinFormCommon      WinForm Common Library
   LJCWinFormControls    WinForm Control Library</pre>
       </p>
       <p>
         Copy the following projects for advanced message-based data access.
-        <pre>
+        <pre style="font-size: 9pt">
   LJCDBMessage          Data Message Library
   LJCGridDataLib        Grid Helper Library (For WinForms development.)
   LJCDBDataAccess       Message-based Data Access Library
