--- a/HTML/AddDataRowsToGrid.html
+++ b/HTML/AddDataRowsToGrid.html
@@ -72,14 +72,14 @@
     <span class='comment'>// Create Grid Columns from DataTable.Columns.</span>
     sql = "select * from Province";
     dataTable = dataAccess.GetSchemaOnly(sql);
-    <span class='commonType'>var</span> dbColumns = TableData.GetDbColumns(dataTable.Columns);
+    <span class='commonType'>var</span> dataDefinition = TableData.GetDbColumns(dataTable.Columns);
     <span class='commonType'>var</span> propertyNames = <span class='keyWord'>new</span> <span class='userType'>List</span><string>()
     {
       { "Name" },
       { "Description" },
       { "Abbreviation" }
     };
-    gridColumns = dbColumns.LJCGetColumns(propertyNames);
+    gridColumns = dataDefinition.LJCGetColumns(propertyNames);
     <span class='keyWord'>break</span>;
   }
 
