--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -24,10 +24,15 @@
       <div id='Title'>LJC Tutorials</div>
     </div>
     <div class='Text'>
+      <h4>General Topics</h4>
       <p>
         How to use the
         <a href="HowToUseLJCProjects.html">LJCProjects</a> code.
       </p>
+      <p>
+        How to add <a href="AddCustomControls.html">LJC Custom Controls</a> to the ToolBox.
+      </p>
+
       <h4>DataAccess</h4>
       <p>
         How to Configure DataAccess connection string using
