--- a/HTML/AddDataRowsToGrid.html
+++ b/HTML/AddDataRowsToGrid.html
@@ -19,7 +19,7 @@
     <div class="PathText">
       / <a href="../index.html">Home</a>
       / <a href="Tutorials.html">HowTo</a>
-      / AddGridRows
+      / AddGridDataRows
     </div>
     <br />
     <div id='Header'>
