--- a/HTML/ConfigDataAccessWithConfigs.html
+++ b/HTML/ConfigDataAccessWithConfigs.html
@@ -19,7 +19,7 @@
     <div class="PathText">
       / <a href="../index.html">Home</a>
       / <a href="Tutorials.html">HowTo</a>
-      / Configs
+      / DataConfigs
     </div>
     <br />
     <div id='Header'>
