--- a/HTML/HowToUseLJCProjects.html
+++ b/HTML/HowToUseLJCProjects.html
@@ -18,7 +18,7 @@
     <div class="PathText">
       / <a href="../index.html">Home</a>
       / <a href="Tutorials.html">HowTo</a>
-      / Code
+      / LJCProjects
     </div>
     <br />
     <div id='Header'>
