--- a/HTML/AddCustomControls.html
+++ b/HTML/AddCustomControls.html
@@ -33,7 +33,7 @@
         "View" menu and then "ToolBox".
       </p>
       <p>
-        Click the right mouse button anywhere in ToolBox and select the
+        Click the right mouse button anywhere in the ToolBox and select the
         "Add Tab" menu item. Name the tab "LJCControls".
       </p>
       <p>
