--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>LJC Assemblies</title>
+  <meta name="keywords" content="GitHub, C# (.NET) Libraries, C# (.NET) Framework, LJCProjects, LJC Projects, LJC Libraries">
   <meta charset='utf-8' />
   <meta name="description" content="LJC C# CodeDoc">
-  <meta name="keywords" content="LJC, C#, Code, Documentation">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
   <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
