--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>LJC Assemblies</title>
-  <meta name="keywords" content="GitHub, C# (.NET) Libraries, C# (.NET) Framework, LJCProjects, LJC Projects, LJC Libraries">
+  <meta name="keywords" content="LJCProjects, GitHub, LJC Projects, LJC Libraries, C# Libraries, C# Framework">
   <meta charset='utf-8' />
   <meta name="description" content="LJC C# CodeDoc">
   <meta name='author' content='Lester J. Clark' />
