--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>LJC Assemblies</title>
   <meta name="keywords" content="LJCProjects, GitHub, LJC Projects, LJC Libraries, C# Libraries, C# Framework">
   <meta charset='utf-8' />
-  <meta name="description" content="LJC C# CodeDoc">
+  <meta name="description" content="LJC C# Code">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
   <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
