--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <!-- index.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
-  <title>LJC Assemblies</title>
+  <title>LJC C# Projects</title>
+  <meta name="description" content="LJC C# Code">
   <meta name="keywords" content="LJC, GitHub, LJCProjects, LJC Projects, LJC Libraries, C# Libraries, C# Framework">
   <meta charset='utf-8' />
-  <meta name="description" content="LJC C# Code">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
   <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
