--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="page">
     <br />
     <div id='Header'>
-      <div id='Title'>LJC Assemblies</div>
+      <div id='Title'>LJC Projects</div>
     </div>
     <div class='Text'>
-      <p>Lester J. Clark C# Assemblies</p>
+      <p>Lester J. Clark C# Projects</p>
       <p>
         <a href="HTML/Tutorials.html">LJCProjects "How To..."</a> 
       </p>
