--- a/HTML/ConfigDataAccessWithBuilder.html
+++ b/HTML/ConfigDataAccessWithBuilder.html
@@ -4,7 +4,7 @@
 <!-- HowToUseLJCProjects.html -->
 <html lang="en">
 <head>
-  <title>How to Configure DataAccess with Connection Builder</title>
+  <title>Config DataAccess with Builder</title>
   <meta charset='utf-8' />
   <meta name="description" content="How to Use LJCProjects">
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
