--- a/HTML/ConfigDataAccessWithConfigs.html
+++ b/HTML/ConfigDataAccessWithConfigs.html
@@ -4,7 +4,7 @@
 <!-- ConfigDataAccessWithConfigs.html -->
 <html lang="en">
 <head>
-  <title>Config DataAccess with DataConfigs</title>
+  <title>Config DataAccess with Configs</title>
   <meta charset='utf-8' />
   <meta name="description" content="How to Use LJCProjects">
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
