--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -46,6 +46,20 @@
         How to add DataTable Rows to an LJCDataGrid using
         <a href="AddDataRowsToGrid.html">TableData</a>.
       </p>
+
+      <h4>SQLManager</h4>
+      <p>
+        How to select data using
+        <a href="SelectWithSQLManager.html">SQLManager</a>.
+      </p>
+      <p>
+        How to update data using
+        <a href="UpdateWithKeys.html">Keys</a>.
+      </p>
+      <p>
+        How to update data using
+        <a href="UpdateWithFilters.html">Filters</a>.
+      </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
