--- a/HTML/AddDataRowsToGrid.html
+++ b/HTML/AddDataRowsToGrid.html
@@ -38,7 +38,7 @@
 
 <span class='modifier'>private</span> <span class='commonType'>void</span> DataRetrieve(<span class='userType'>LJCDataGrid</span> ljcGrid)
 {
-  <span class='comment'>// Configure DataAccess using internal configuration.</span>
+      <span class='comment'>// Configure DataAccess using internal configuration.</span>
   DbConnectionStringBuilder connectionBuilder;
   connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
   {
@@ -46,59 +46,63 @@
     { "Initial Catalog", "DatabaseName" },
     { "Integrated Security", "True" }
   };
-  <span class='commonType'>var</span> connectionString = connectionBuilder.ConnectionString;
-  <span class='commonType'>var</span> providerName = "System.Data.SqlClient";
-  <span class='commonType'>var</span> dataAccess = <span class='keyWord'>new</span> <span class='userType'>DataAccess</span>(connectionString, providerName);
+      <span class='commonType'>var</span> connectionString = connectionBuilder.ConnectionString;
+      <span class='commonType'>var</span> providerName = "System.Data.SqlClient";
+      <span class='commonType'>var</span> dataAccess = <span class='keyWord'>new</span> <span class='userType'>DataAccess</span>(connectionString, providerName);
 
-  <span class='comment'>// Configure GridColumns.</span>
+      <span class='comment'>// Configure GridColumns.</span>
   DataTable dataTable;
   DbColumns gridColumns = <span class='keyWord'>null</span>;
-  <span class='commonType'>string</span> sql;
+      <span class='commonType'>string</span> sql;
 
-  <span class='comment'>// *** Test Setting ***</span>
-  <span class='comment'>//var configType = "Manually";</span>
-  <span class='commonType'>var</span> configType = "FromTableColumns";
-  <span class='keyWord'>switch</span> (configType)
+      <span class='comment'>// *** Test Setting ***</span>
+      <span class='comment'>//var configType = "Manually";</span>
+      <span class='commonType'>var</span> configType = "FromTableColumns";
+      <span class='keyWord'>switch</span> (configType)
   {
-    <span class='keyWord'>case</span> "Manually":
-    <span class='comment'>// Create Grid Columns manually.</span>
+      <span class='keyWord'>case</span> "Manually":
+      <span class='comment'>// Create Grid Columns manually.</span>
     gridColumns = <span class='keyWord'>new</span> <span class='userType'>DbColumns</span>();
     gridColumns.Add("Name", maxLength: 60);
     gridColumns.Add("Description", maxLength: 100);
     gridColumns.Add("Abbreviation", maxLength: 15);
-    <span class='keyWord'>break</span>;
+      <span class='keyWord'>break</span>;
 
-    <span class='keyWord'>case</span> "FromTableColumns":
-    <span class='comment'>// Create Grid Columns from DataTable.Columns.</span>
+      <span class='keyWord'>case</span> "FromTableColumns":
+      <span class='comment'>// Create Grid Columns from DataTable.Columns.</span>
     sql = "select * from Province";
     dataTable = dataAccess.GetSchemaOnly(sql);
-    <span class='commonType'>var</span> dataColumns = TableData.DataColumnsClone(dataTable);
-    <span class='commonType'>var</span> dataDefinition = TableData.GetDbColumns(dataColumns);
-    <span class='commonType'>var</span> propertyNames = <span class='keyWord'>new</span> <span class='userType'>List</span><string>()
+      <span class='commonType'>var</span> dataColumns = TableData.DataColumnsClone(dataTable);
+      <span class='commonType'>var</span> dataDefinition = TableData.GetDbColumns(dataColumns);
+      <span class='commonType'>var</span> propertyNames = <span class='keyWord'>new</span> <span class='userType'>List</span><string>()
     {
       { "Name" },
       { "Description" },
       { "Abbreviation" }
     };
     gridColumns = dataDefinition.LJCGetColumns(propertyNames);
-    <span class='keyWord'>break</span>;
+      <span class='keyWord'>break</span>;
   }
   ljcGrid.LJCAddColumns(gridColumns);
 
-  <span class='comment'>// Load the data.</span>
+      <span class='comment'>// Load the data.</span>
   sql = "select * from Province";
   dataTable = dataAccess.GetSchemaOnly(sql);
   dataAccess.FillDataTable(sql, dataTable);
-  <span class='keyWord'>if</span> (NetCommon.HasData(dataTable))
+      <span class='keyWord'>if</span> (NetCommon.HasData(dataTable))
   {
-    <span class='comment'>// Create and populate the grid rows individually.</span>
-    <span class='keyWord'>foreach</span> (DataRow dataRow <span class='keyWord'>in</span> dataTable.Rows)
+      <span class='comment'>// Create and populate the grid rows individually.</span>
+      <span class='keyWord'>foreach</span> (DataRow dataRow <span class='keyWord'>in</span> dataTable.Rows)
     {
       <span class='commonType'>var</span> ljcGridRow = ljcGrid.LJCRowAdd();
       TableData.RowSetValues(ljcGridRow, dataRow);
     }
   }
 }</pre>
+    </div>
+    <div class="SmallText">
+      Copyright &copy Lester J. Clark and Contributors.<br />
+      Licensed under the MIT License.
     </div>
   </div>
 </body>
