--- a/HTML/SelectWithSQLManager.html
+++ b/HTML/SelectWithSQLManager.html
@@ -30,6 +30,11 @@
       </p>
 
       <pre class="code">
+<span class='keyWord'>using</span> LJCDBClientLib;
+<span class='keyWord'>using</span> LJCDBMessage;
+<span class='keyWord'>using</span> LJCGridDataLib;
+<span class='keyWord'>using</span> LJCWinFormControls;
+
 <span class='comment'>// Selecting data with the SQLManager object.</span>
 <span class='modifier'>internal</span> Province SelectWithSql()
 {
