--- a/HTML/UpdateWithFilters.html
+++ b/HTML/UpdateWithFilters.html
@@ -30,6 +30,11 @@
       </p>
 
       <pre class="code">
+<span class='keyWord'>using</span> LJCDBClientLib;
+<span class='keyWord'>using</span> LJCDBMessage;
+<span class='keyWord'>using</span> LJCGridDataLib;
+<span class='keyWord'>using</span> LJCWinFormControls;
+
 <span class='comment'>// Updating data with Filters using the SQLManager object.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithFilters(Province province)
 {
