--- a/HTML/SelectWithSQLManager.html
+++ b/HTML/SelectWithSQLManager.html
@@ -63,6 +63,22 @@
   <span class='commonType'>var</span> converter = <span class='keyWord'>new</span> ResultConverter<Province, Provinces>();
   retValue = converter.CreateDataFromTable(dataTable);
   <span class='keyWord'>return</span> retValue;
+}
+
+<span class='comment'>// Represents a Province</span>
+<span class='modifier'>internal</span> <span class='refType'>class</span> <span class='userType'>Province</span>
+{
+  <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Primary key value.&lt;/summary&gt;></span>
+  <span class='modifier'>public</span> <span class='commonType'>long</span> ID { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
+
+  <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Name.&lt;/summary&gt;></span>
+  <span class='modifier'>public</span> <span class='commonType'>string</span> Name { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
+
+  <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Description.&lt;/summary&gt;</span>
+  <span class='modifier'>public</span> <span class='commonType'>string</span> Description { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
+
+  <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Abbreviation.&lt;/summary&gt;</span>
+  <span class='modifier'>public</span> <span class='commonType'>string</span> Abbreviation { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
 }</pre>
     </div>
     <div class="SmallText">
