--- a/HTML/UpdateWithKeys.html
+++ b/HTML/UpdateWithKeys.html
@@ -38,9 +38,19 @@
 <span class='comment'>// Updating data with Keys using the SQLManager object.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province)
 {
+  <span class='comment'>// Create Data Configuration values.</span>
+  <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
+  {
+    { "Data Source", "DataServerName" },
+    { "Initial Catalog", "DatabaseName" },
+    { "Integrated Security", "True" }
+  };
+  <span class='commonType'>var</span> connectionString = connectionBuilder.ConnectionString;
+  <span class='commonType'>var</span> providerName = "System.Data.SqlClient";
+
   <span class='comment'>// Create the SQLManager.</span>
-  <span class='commonType'>var</span> dataConfigName = "LJCData";
-  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(dataConfigName, "Province");
+  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, "Province", connectionString
+    , providerName);
 
   <span class='comment'>// Change Values</span>
   <span class='comment'>//province.Description = "";</span>
