--- a/HTML/SelectWithSQLManager.html
+++ b/HTML/SelectWithSQLManager.html
@@ -33,7 +33,7 @@
       </p>
       <pre class="code">
 These DbRequest message parts are:
-KeyColumns    (LJCNetCommon.DbColumns)    - Used to create simple "Where" clause.
+KeyColumns    (LJCNetCommon.DbColumns)    - Used to create a simple "Where" clause.
 PropertyNames (List&lt;string&gt;())            - Modifies which columns appear in the SQL statement.
 Filters       (LJCDBMessageLib.DbFilters) - Used to create more complex "Where" clauses.
 Joins         (LJCDBMessageLib.DbJoins)   - Used to create "Join" clauses.
